# interplib

./: .buildinfo  .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  plot_poisson_direct-2.doctree  plot_poisson_direct.doctree  plot_poisson_mixed.doctree  sg_execution_times.doctree
.doctrees/source/: basis1d.doctree  bernstein1d.doctree  polynomial1d.doctree  product_basis.doctree  splines1d.doctree
_downloads/286a7fc26bd6ec3215a849af08531fe6/: plot_poisson_mixed.ipynb
_downloads/a11a4c8d9175c89b5898f49996e5600e/: plot_poisson_direct.ipynb
_downloads/b3f95456829955fe6b2ee24ff9e2a771/: plot_poisson_direct-2.ipynb
_modules/: index.html
_modules/interplib/: bernstein.html  product_basis.html  splines.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_poisson_direct-2.rst.txt  plot_poisson_direct.rst.txt  plot_poisson_mixed.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_poisson_direct-2.html  plot_poisson_direct.html  plot_poisson_mixed.html  sg_execution_times.html
examples/: plot_basis_sets.py  plot_domains.py  plot_function_spaces.py  plot_gradients.py  plot_integration_rules.py
python/interplib/: __init__.py  _interp.pyi  decomp.py  degrees_of_freedom.py  domains.py  enum_type.py  integration.py  mass_matrix.py  system2d.py
source/: basis1d.html  bernstein1d.html  polynomial1d.html  product_basis.html  splines1d.html
src/basis/: basis_bernstein.c  basis_bernstein.h  basis_lagrange.c  basis_lagrange.h  basis_legendre.c  basis_legendre.h  basis_set.c  basis_set.h  covector_basis.c  covector_basis.h  de_rham_sequence.c  de_rham_sequence.h
src/common/: allocator.c  allocator.h  common_defines.h  error.c  error.h  rw_lock.c  rw_lock.h
src/integration/: gauss_legendre.c  gauss_legendre.h  gauss_lobatto.c  gauss_lobatto.h  integration_rules.c  integration_rules.h
src/operations/: matrices.c  matrices.h  multidim_iteration.c  multidim_iteration.h  nd_iteration.c  nd_iteration.h  permutations.c  permutations.h  reconstruction.c  reconstruction.h
src/polynomials/: bernstein.c  bernstein.h  lagrange.c  lagrange.h  legendre.c  legendre.h
src/python/: basis_objects.c  basis_objects.h  basis_set_object.c  basis_set_object.h  covector_basis.c  covector_basis.h  degrees_of_freedom.c  degrees_of_freedom.h  function_space_objects.c  function_space_objects.h  incidence.c  incidence.h  integration_objects.c  integration_objects.h  integration_rule_object.c  integration_rule_object.h  mappings.c  mappings.h  mass_matrices.c  mass_matrices.h  module.c  module.h
src/python/topology/: geoid_object.c  geoid_object.h  line_object.c  line_object.h  manifold1d_object.c  manifold1d_object.h  manifold2d_object.c  manifold2d_object.h  manifold_object.c  manifold_object.h  surface_object.c  surface_object.h
src/reconstruction/: reconstruction.c  reconstruction.h
src/topology/: topology.c  topology.h
src/visualization/: CMakeLists.txt  color.c  color.h  common.c  common.h  configuration.c  configuration.h  space.c  space.h  visual_interface.c  visual_interface.h
src/visualization/renderer/: CMakeLists.txt  renderer_1d.c  renderer_1d.h
src/visualization/renderer/glad/include/glad/: glad.h
src/visualization/renderer/glad/src/: glad.c
src/visualization/renderer/shaders/: 1d_line_frag.h  1d_line_vert.h
test_c/: CMakeLists.txt
test_c/basis/: test_basis_set_registry.c  test_covector_basis.c
test_c/common/: common.c  common.h  test_rw_lock.c
test_c/integration/: test_glg.c  test_gll.c  test_int_rule_registry.c
test_c/operations/: test_back_substitute.c  test_multidim_iterator_1d.c  test_multidim_iterator_2d.c  test_multidim_iterator_3d.c  test_nd_iterator_1d.c  test_nd_iterator_2d.c  test_nd_iterator_3d.c  test_permutations.c  test_qr_decomposition.c  test_qr_decomposition_2.c  test_qr_decomposition_3.c
test_c/polynomials/: test_lagrange_derivative_transpose.c  test_lagrange_transpose.c
tests/: test_base_geo.py  test_basis_transform.py  test_covector_basis.py  test_dofs.py  test_function_space.py  test_gradient.py  test_incidence.py  test_integration_rule.py  test_integration_space.py  test_kform_mass_matrix.py  test_l2_proj.py  test_lagrange.py  test_manifold2d.py  test_mapping.py  test_mass_matrix.py  test_mesh1d.py
