[project]
name = "interplib"
version = "0.0.1a"
authors = [{ name = "Jan Roth", email = "r0th.j4n@gmail.com" }]
description = "Interpolation library designed to handle different topologies."
requires-python = ">=3.11"
dependencies = ["numpy>=2.0.0", "scipy"]


[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# cmake.verbose = true
cmake.build-type = "Release"
cmake.source-dir = "."
build.verbose = true
logging.level = "INFO"
editable.verbose = true
editable.rebuild = false


[project.optional-dependencies]
dev = [
    "build",
    "scikit-build-core",
    "pyrefly",
    "npt-promote",
    "pytest",
    "pytest-cov",
    "interrogate",
    "nox",
    "pre-commit",
    "codespell",
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "tomli",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-favicon",
    "sphinx-design",
    "sphinx-gallery",
    "pyvista[jupyter,trame]",
    "pypandoc",
    "pytest-sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinxcontrib-websupport",
    "sphinxcontrib-asciinema",
    "jupyter-sphinx",
]


[tool.pyrefly]
project-includes = ["python/interplib/**/*.py", "python/interplib/**/*.pyi"]
use-ignore-files = true
search-path = ["python/interplib"]
ignore-missing-imports = ["*"]


[tool.codespell]
skip = "sandbox/*"
count = true

[tool.ruff]
exclude = [".venv", ".nox", ".pytest_cache", ".vscode", "doc"]
line-length = 90

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E", "W", "D", "I", "F", "ARG", "A", "FA", "ICN", "TID"]
ignore = ["ARG002"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
addopts = ["--doctest-modules", "-ra", "--cov=interplib", "--ignore=cpyutl"]
testpaths = ["tests", "src"]
console_output_style = "count"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.interrogate]
ignore-init-method = true
fail-under = 100
exclude = ["sandbox", "doc", "build", ".*/", "cmake-*/"]
style = "sphinx"
verbose = 1
